--- a/src/app.postcss
+++ b/src/app.postcss
@@ -2,3 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Box-Sizing Reset (Universal with inheritance) */
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
