CSS 100vh fix, add Today page skeleton

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -3,10 +3,16 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Box-Sizing Reset (Universal with inheritance) */
+/* Includes Box-Sizing Reset (Universal with inheritance) */
 html {
-  box-sizing: border-box;
+	box-sizing: border-box;
+	height: 100%;
 }
-*, *:before, *:after {
-  box-sizing: inherit;
+*,
+*:before,
+*:after {
+	box-sizing: inherit;
+}
+body {
+	min-height: 100%;
 }
