Add more Today page components

--- a/src/lib/components/today/actions-input/Editor.css
+++ b/src/lib/components/today/actions-input/Editor.css
@@ -48,4 +48,8 @@
 	white-space: pre-wrap;
 	overflow-wrap: break-word;
 	font-family: sans-serif;
+	font-weight: bold;
+}
+.goal__editor__span {
+	font-weight: bold;
 }
